jack-compiler/grammar/.antlr/JackParser.java
// Generated from /home/babkamen/git/nand2tetris/tools/jack-lsp/jack-compiler/grammar/JackParser.g4 by ANTLR 4.13.1

	import { SubroutineScope, LocalSymbolTable } from "../symbol";

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JackParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, CONSTRUCTOR=2, FUNCTION=3, METHOD=4, FIELD=5, STATIC=6, VAR=7, 
		INT=8, CHAR=9, BOOLEAN=10, VOID=11, LET=12, DO=13, IF=14, ELSE=15, WHILE=16, 
		RETURN=17, LBRACE=18, RBRACE=19, LPAREN=20, RPAREN=21, LBRACKET=22, RBRACKET=23, 
		DOT=24, COMMA=25, SEMICOLON=26, EQUALS=27, PLUS=28, MINUS=29, MUL=30, 
		DIV=31, AND=32, OR=33, TILDE=34, LESS_THAN=35, GREATER_THAN=36, WS=37, 
		COMMENT=38, LINE_COMMENT=39, INTEGER_LITERAL=40, TRUE=41, FALSE=42, NULL_LITERAL=43, 
		THIS_LITERAL=44, IDENTIFIER=45, STRING_LITERAL=46, UnterminatedStringLiteral=47;
	public static final int
		RULE_program = 0, RULE_classDeclaration = 1, RULE_className = 2, RULE_classVarDec = 3, 
		RULE_fieldList = 4, RULE_fieldName = 5, RULE_subroutineDeclaration = 6, 
		RULE_subroutineType = 7, RULE_subroutineDecWithoutType = 8, RULE_subroutineName = 9, 
		RULE_subroutineReturnType = 10, RULE_varType = 11, RULE_parameterList = 12, 
		RULE_parameter = 13, RULE_parameterName = 14, RULE_subroutineBody = 15, 
		RULE_rBrace = 16, RULE_varDeclaration = 17, RULE_varNameInDeclaration = 18, 
		RULE_varName = 19, RULE_statements = 20, RULE_statement = 21, RULE_letStatement = 22, 
		RULE_equals = 23, RULE_ifElseStatement = 24, RULE_ifStatement = 25, RULE_ifExpression = 26, 
		RULE_elseStatement = 27, RULE_whileStatement = 28, RULE_whileExpression = 29, 
		RULE_doStatement = 30, RULE_subroutineCall = 31, RULE_subroutineId = 32, 
		RULE_returnStatement = 33, RULE_expressionList = 34, RULE_expression = 35, 
		RULE_groupedExpression = 36, RULE_unaryOperation = 37, RULE_arrayAccess = 38, 
		RULE_constant = 39, RULE_booleanLiteral = 40, RULE_unaryOperator = 41, 
		RULE_binaryOperator = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDeclaration", "className", "classVarDec", "fieldList", 
			"fieldName", "subroutineDeclaration", "subroutineType", "subroutineDecWithoutType", 
			"subroutineName", "subroutineReturnType", "varType", "parameterList", 
			"parameter", "parameterName", "subroutineBody", "rBrace", "varDeclaration", 
			"varNameInDeclaration", "varName", "statements", "statement", "letStatement", 
			"equals", "ifElseStatement", "ifStatement", "ifExpression", "elseStatement", 
			"whileStatement", "whileExpression", "doStatement", "subroutineCall", 
			"subroutineId", "returnStatement", "expressionList", "expression", "groupedExpression", 
			"unaryOperation", "arrayAccess", "constant", "booleanLiteral", "unaryOperator", 
			"binaryOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'constructor'", "'function'", "'method'", "'field'", 
			"'static'", "'var'", "'int'", "'char'", "'boolean'", "'void'", "'let'", 
			"'do'", "'if'", "'else'", "'while'", "'return'", "'{'", "'}'", "'('", 
			"')'", "'['", "']'", "'.'", "','", "';'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'&'", "'|'", "'~'", "'<'", "'>'", null, null, null, null, "'true'", 
			"'false'", "'null'", "'this'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "CONSTRUCTOR", "FUNCTION", "METHOD", "FIELD", "STATIC", 
			"VAR", "INT", "CHAR", "BOOLEAN", "VOID", "LET", "DO", "IF", "ELSE", "WHILE", 
			"RETURN", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"DOT", "COMMA", "SEMICOLON", "EQUALS", "PLUS", "MINUS", "MUL", "DIV", 
			"AND", "OR", "TILDE", "LESS_THAN", "GREATER_THAN", "WS", "COMMENT", "LINE_COMMENT", 
			"INTEGER_LITERAL", "TRUE", "FALSE", "NULL_LITERAL", "THIS_LITERAL", "IDENTIFIER", 
			"STRING_LITERAL", "UnterminatedStringLiteral"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JackParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JackParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JackParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			classDeclaration();
			setState(87);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public LocalSymbolTable | undefined localSymbolTable;
		public TerminalNode CLASS() { return getToken(JackParser.CLASS, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(JackParser.LBRACE, 0); }
		public RBraceContext rBrace() {
			return getRuleContext(RBraceContext.class,0);
		}
		public List<ClassVarDecContext> classVarDec() {
			return getRuleContexts(ClassVarDecContext.class);
		}
		public ClassVarDecContext classVarDec(int i) {
			return getRuleContext(ClassVarDecContext.class,i);
		}
		public List<SubroutineDeclarationContext> subroutineDeclaration() {
			return getRuleContexts(SubroutineDeclarationContext.class);
		}
		public SubroutineDeclarationContext subroutineDeclaration(int i) {
			return getRuleContext(SubroutineDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(CLASS);
			setState(90);
			className();
			setState(91);
			match(LBRACE);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FIELD || _la==STATIC) {
				{
				{
				setState(92);
				classVarDec();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28L) != 0)) {
				{
				{
				setState(98);
				subroutineDeclaration();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			rBrace();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackParser.IDENTIFIER, 0); }
		public ClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_className; }
	}

	public final ClassNameContext className() throws RecognitionException {
		ClassNameContext _localctx = new ClassNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_className);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassVarDecContext extends ParserRuleContext {
		public FieldListContext fieldList() {
			return getRuleContext(FieldListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JackParser.SEMICOLON, 0); }
		public TerminalNode STATIC() { return getToken(JackParser.STATIC, 0); }
		public TerminalNode FIELD() { return getToken(JackParser.FIELD, 0); }
		public ClassVarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classVarDec; }
	}

	public final ClassVarDecContext classVarDec() throws RecognitionException {
		ClassVarDecContext _localctx = new ClassVarDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classVarDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if ( !(_la==FIELD || _la==STATIC) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(109);
			fieldList();
			setState(110);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldListContext extends ParserRuleContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public List<FieldNameContext> fieldName() {
			return getRuleContexts(FieldNameContext.class);
		}
		public FieldNameContext fieldName(int i) {
			return getRuleContext(FieldNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JackParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JackParser.COMMA, i);
		}
		public FieldListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldList; }
	}

	public final FieldListContext fieldList() throws RecognitionException {
		FieldListContext _localctx = new FieldListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			varType();
			setState(113);
			fieldName();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(114);
				match(COMMA);
				setState(115);
				fieldName();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackParser.IDENTIFIER, 0); }
		public FieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldName; }
	}

	public final FieldNameContext fieldName() throws RecognitionException {
		FieldNameContext _localctx = new FieldNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fieldName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubroutineDeclarationContext extends ParserRuleContext {
		public SubroutineScope | undefined symbols;
		public SubroutineTypeContext subroutineType() {
			return getRuleContext(SubroutineTypeContext.class,0);
		}
		public SubroutineDecWithoutTypeContext subroutineDecWithoutType() {
			return getRuleContext(SubroutineDecWithoutTypeContext.class,0);
		}
		public SubroutineDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineDeclaration; }
	}

	public final SubroutineDeclarationContext subroutineDeclaration() throws RecognitionException {
		SubroutineDeclarationContext _localctx = new SubroutineDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subroutineDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			subroutineType();
			setState(124);
			subroutineDecWithoutType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubroutineTypeContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(JackParser.CONSTRUCTOR, 0); }
		public TerminalNode METHOD() { return getToken(JackParser.METHOD, 0); }
		public TerminalNode FUNCTION() { return getToken(JackParser.FUNCTION, 0); }
		public SubroutineTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineType; }
	}

	public final SubroutineTypeContext subroutineType() throws RecognitionException {
		SubroutineTypeContext _localctx = new SubroutineTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subroutineType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 28L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubroutineDecWithoutTypeContext extends ParserRuleContext {
		public SubroutineReturnTypeContext subroutineReturnType() {
			return getRuleContext(SubroutineReturnTypeContext.class,0);
		}
		public SubroutineNameContext subroutineName() {
			return getRuleContext(SubroutineNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(JackParser.LPAREN, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(JackParser.RPAREN, 0); }
		public SubroutineBodyContext subroutineBody() {
			return getRuleContext(SubroutineBodyContext.class,0);
		}
		public SubroutineDecWithoutTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineDecWithoutType; }
	}

	public final SubroutineDecWithoutTypeContext subroutineDecWithoutType() throws RecognitionException {
		SubroutineDecWithoutTypeContext _localctx = new SubroutineDecWithoutTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subroutineDecWithoutType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			subroutineReturnType();
			setState(129);
			subroutineName();
			setState(130);
			match(LPAREN);
			setState(131);
			parameterList();
			setState(132);
			match(RPAREN);
			setState(133);
			subroutineBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubroutineNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackParser.IDENTIFIER, 0); }
		public SubroutineNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineName; }
	}

	public final SubroutineNameContext subroutineName() throws RecognitionException {
		SubroutineNameContext _localctx = new SubroutineNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subroutineName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubroutineReturnTypeContext extends ParserRuleContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(JackParser.VOID, 0); }
		public SubroutineReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineReturnType; }
	}

	public final SubroutineReturnTypeContext subroutineReturnType() throws RecognitionException {
		SubroutineReturnTypeContext _localctx = new SubroutineReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_subroutineReturnType);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case BOOLEAN:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				varType();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(JackParser.INT, 0); }
		public TerminalNode CHAR() { return getToken(JackParser.CHAR, 0); }
		public TerminalNode BOOLEAN() { return getToken(JackParser.BOOLEAN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(JackParser.IDENTIFIER, 0); }
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372090624L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JackParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JackParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372090624L) != 0)) {
				{
				setState(143);
				parameter();
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(144);
					match(COMMA);
					setState(145);
					parameter();
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public ParameterNameContext parameterName() {
			return getRuleContext(ParameterNameContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			varType();
			setState(154);
			parameterName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackParser.IDENTIFIER, 0); }
		public ParameterNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterName; }
	}

	public final ParameterNameContext parameterName() throws RecognitionException {
		ParameterNameContext _localctx = new ParameterNameContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_parameterName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubroutineBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(JackParser.LBRACE, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public RBraceContext rBrace() {
			return getRuleContext(RBraceContext.class,0);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public SubroutineBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineBody; }
	}

	public final SubroutineBodyContext subroutineBody() throws RecognitionException {
		SubroutineBodyContext _localctx = new SubroutineBodyContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_subroutineBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(LBRACE);
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(159);
				varDeclaration();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			statements();
			setState(166);
			rBrace();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RBraceContext extends ParserRuleContext {
		public TerminalNode RBRACE() { return getToken(JackParser.RBRACE, 0); }
		public RBraceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rBrace; }
	}

	public final RBraceContext rBrace() throws RecognitionException {
		RBraceContext _localctx = new RBraceContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_rBrace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(JackParser.VAR, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public List<VarNameInDeclarationContext> varNameInDeclaration() {
			return getRuleContexts(VarNameInDeclarationContext.class);
		}
		public VarNameInDeclarationContext varNameInDeclaration(int i) {
			return getRuleContext(VarNameInDeclarationContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(JackParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JackParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JackParser.COMMA, i);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(VAR);
			setState(171);
			varType();
			setState(172);
			varNameInDeclaration();
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(173);
				match(COMMA);
				setState(174);
				varNameInDeclaration();
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarNameInDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackParser.IDENTIFIER, 0); }
		public VarNameInDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varNameInDeclaration; }
	}
